[gd_scene load_steps=2 format=2]

[ext_resource path="res://common/hit_box.gd" type="Script" id=1]

[node name="HitBox" type="Area2D"]
script = ExtResource( 1 )

[node name="HitShape" type="CollisionShape2D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_shape_entered" from="." to="." method="_on_HitBox_area_shape_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
